--- a/bugs.html
+++ b/bugs.html
@@ -411,7 +411,7 @@ return(!i||i!==r&&!b.contains(r,i))&&(e.type=o.origType,n=o.handler.apply(this,a
   
   $(function(){
       if(title){
-        $('#title').html(title);
+        $('#header').html(title);
         document.title = title + " - bugs";
       }
       if(logo){
